updating last updated at

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					alt="laura sieck"
 					style="float: left; margin: 1%"
 				/>
-				Hi, I’m Laura! I'm based in Alabama with six years of experience
+				Hi, I’m Laura! I'm based in Alabama with over six years of experience
 				specializing in fraud prevention, data analysis, and cybersecurity. My
 				career began with Shipt, where I grew in various roles, each reinforcing
 				my analytical and problem-solving skills. In my most recent role as a
@@ -276,7 +276,7 @@
 					<p style="font-style: italic">
 						Created and Maintained by Laura Sieck
 						<br />
-						last updated December 2024
+						last updated January 2025
 					</p>
 				</div>
 			</footer>
