--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
 	</head>
 
 	<body>
-		<h1><bold>PORTFOLIO IN PROGRESS</bold></h1>
 		<section>
 			<nav
 				class="navbar"
@@ -162,7 +161,9 @@
 
 						<div class="event">
 							<p class="eDate">Current Day</p>
-							<p class="eTxt">Working on a career switch from engineering to data analytics!</p>
+							<p class="eTxt">
+								Working on a career switch from engineering to data analytics!
+							</p>
 						</div>
 					</div>
 				</div>
@@ -185,64 +186,17 @@
 						>here</a
 					>.
 				</p>
-				
 
-				<div class="portfolio-container">
-
-										<div class="portfolio-card">
-						<p class="portfoliosubtext">Sales Dashboard</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://haproxy-traffic-splitter/views/SalesDashboard_17374106621060/SalesDashboard?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">HR Dashboard</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://haproxy-traffic-splitter/views/HRDashboard_17367843720520/HRSummary?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-					
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">Video Games Sales 1980-2020</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://public.tableau.com/views/VideoGameSalesTrends_17338760419000/Dashboard1?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-					<div class="portfolio-card">
-						<p class="portfoliosubtext">Electricity Supply and Demand</p>
-						<hr />
-						<p>
-							<a
-								class="portfolio-link"
-								href="https://public.tableau.com/views/cac115_story_16463586738860/Electricity?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"
-								target="_blank"
-								>View</a
-							>
-						</p>
-					</div>
-
-				</div>
-
+				<a
+					href="https://public.tableau.com/app/profile/laura.sieck/vizzes"
+					target="_blank"
+				>
+					<img
+						src="images/TableauSS.PNG"
+						alt="tableau profile"
+						style="float: center; margin: 1%"
+					/>
+				</a>
 			</section>
 
 			<hr />
@@ -255,28 +209,26 @@
 					>
 						<h4>Contact Me</h4>
 
-						<i class="material-icons">email</i>
 						<a
 							href="mailto:sieck519@gmail.com"
 							class="contactlinks"
 						>
-							sieck519@gmail.com</a
+							<i class="material-icons">email</i></a
 						>
-						<br />
-						<i class="material-icons">link</i>
+
 						<a
 							href="https://www.linkedin.com/in/laurasieck/"
 							target="_blank"
 							class="contactlinks"
-							>LinkedIn</a
+							><i class="material-icons">link</i></a
 						>
-						<br />
+
 						<br />
 					</div>
 					<p style="font-style: italic">
 						Created and Maintained by Laura Sieck
 						<br />
-						last updated January 2025
+						last updated February 2025
 					</p>
 				</div>
 			</footer>
