--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 					target="_blank"
 				>
 					<img
-						src="images/TableauSS.PNG"
+						src="images/TableauSS.png"
 						alt="tableau profile"
 						style="float: center; margin: 1%"
 					/>
