--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
 								>
 									Tableau
 								</a>
+
+								<a
+									class="navbar-item"
+									href="#coding"
+								>
+									Coding
+								</a>
 							</div>
 						</div>
 					</div>
@@ -192,8 +199,38 @@
 					target="_blank"
 				>
 					<img
+						class="p-image"
 						src="images/tableau.JPG"
 						alt="tableau profile"
+						style="float: center; margin: 1%"
+					/>
+				</a>
+			</section>
+
+			<!-- python highlights -->
+			<section
+				class="portfolio-section"
+				id="portfolio"
+			>
+				<h2 id="coding">Coding Projects</h2>
+				<p>
+					Check out my GitHub
+					<a
+						href="https://github.com/lsieck519"
+						target="_blank"
+						style="font-weight: bold"
+						>here</a
+					>.
+				</p>
+
+				<a
+					href="https://github.com/lsieck519"
+					target="_blank"
+				>
+					<img
+						class="p-image"
+						src="images/ghss.JPG"
+						alt="github profile"
 						style="float: center; margin: 1%"
 					/>
 				</a>
@@ -228,7 +265,7 @@
 					<p style="font-style: italic">
 						Created and Maintained by Laura Sieck
 						<br />
-						last updated February 2025
+						last updated March 2025
 					</p>
 				</div>
 			</footer>
