adding book recs

--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
 								</a>
 							</div>
 						</div>
+
+						<a
+							class="navbar-item"
+							href="#books"
+						>
+							Books
+						</a>
 					</div>
 
 					<div class="navbar-end">
@@ -212,6 +219,7 @@
 				class="portfolio-section"
 				id="portfolio"
 			>
+				<hr />
 				<h2 id="coding">Coding Projects</h2>
 				<p>
 					Check out my GitHub
@@ -234,6 +242,74 @@
 						style="float: center; margin: 1%"
 					/>
 				</a>
+			</section>
+
+			<!-- books i'd recommend -->
+
+			<section
+				class="portfolio-section"
+				id="portfolio"
+			>
+				<hr />
+				<h2 id="books">Book Recommendations</h2>
+				<br />
+
+				<div class="gallery">
+					<div class="book">
+						<a
+							href="https://a.co/d/bXfp4SM"
+							target="_blank"
+						>
+							<img
+								src="images/practical-tableau.jpg"
+								alt="Practical Tableau"
+						/></a>
+					</div>
+
+					<div class="book">
+						<a
+							href="https://a.co/d/goOvbCY"
+							target="_blank"
+						>
+							<img
+								src="images/tableau-pocket.jpg"
+								alt="Tableau Pocket"
+						/></a>
+					</div>
+
+					<div class="book">
+						<a
+							href="https://a.co/d/4OU44Kv"
+							target="_blank"
+						>
+							<img
+								src="images/storytelling.jpg"
+								alt="Storytelling with Data"
+						/></a>
+					</div>
+
+					<div class="book">
+						<a
+							href="https://a.co/d/0wCcWB1"
+							target="_blank"
+						>
+							<img
+								src="images/sql-quickstart.jpg"
+								alt="SQL-Quickstart"
+						/></a>
+					</div>
+
+					<div class="book">
+						<a
+							href="https://a.co/d/5QPTRt2"
+							target="_blank"
+						>
+							<img
+								src="images/data-science.jpg"
+								alt="Data Science"
+						/></a>
+					</div>
+				</div>
 			</section>
 
 			<hr />
